--- a/test.html
+++ b/test.html
@@ -13,11 +13,13 @@
     <!--
     <form method="post" action="http://localhost:8000/fotos">
         -->
-        <div>Título:<input type="text" name="titulo" /></div>        
-        <div>Descripción<input type="text" name="descripcion" /></div>
+        <div>Nombre: <input type="text" name="titulo" /></div>        
+        <div>Direccion: <input type="text" name="descripcion" /></div>
         
         <div>Foto<input type="file" name="foto" /></div>
-        
+        <label for="opcion1"> 
+        <input type="checkbox" id="opcion1" value="opcion1"> Usuario VIP
+        </label>
         <div><input type="submit" value="enviar" /></div>
     </form>
 </body>
